pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference3.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(reference: ref.Reference<D, Any>): String = throw("not supported")
}
local d: D = new {}
typealias Ref<T> = ref.Reference<D, T>

test = ref.Reference(d, String, "") as Ref<Listing<String>>
